<resources>
    <string name="app_name">CW_1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_in_main_list">List</string>
    <string name="menu_in_main_about">About</string>
    <string name="menu_in_main_create">Create</string>

    <string name="error_not_found">Not Found</string>
    <string name="error_no_info">No Information</string>
    <string name="error_blank_name">Name cannot be blank.</string>
    <string name="error_blank_trip_date">Date of the trip cannot be blank.</string>
    <string name="error_blank_destination">Destination cannot be blank.</string>

    <string name="notification_empty_trip_list">There is no trip.</string>
    <string name="notification_empty_expense_list">There is no expense.</string>
    <string name="notification_create_success">Created successfully.</string>
    <string name="notification_create_fail">Not created successfully.</string>
    <string name="notification_delete_success">Deleted successfully.</string>
    <string name="notification_delete_fail">Not deleted successfully.</string>
    <string name="notification_update_success">Updated successfully.</string>
    <string name="notification_update_fail">Not updated successfully.</string>
    <string name="notification_delete_confirm">Are you sure to delete this?.</string>

    <string name="label_trip_name">Trip name</string>
    <string name="label_destination">Destination</string>
    <string name="label_trip_date">Date of the trip</string>
    <string name="label_requires_risk_assessment">Requires risk assessment</string>
    <string name="label_description">Description</string>
    <string name="label_importance_note">Importance note</string>
    <string name="label_budget_range">Budget range</string>
    <string name="label_weather_condition">Weather condition</string>
    <string name="label_recommended_destination">Recommended destination</string>
    <string name="label_start_date">Starting Date</string>
    <string name="label_date">Date</string>
    <string name="label_time">Time</string>
    <string name="label_require_risk_assessment">Requires risk assessment</string>
    <string name="label_unrequire_risk_assessment">Not requires risk assessment</string>
    <string name="label_type">Type</string>
    <string name="label_add_expense">Add Expense</string>
    <string name="label_register">Register</string>
    <string name="label_confirm">Confirm</string>
    <string name="label_update">Update</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_content">Content</string>
    <string name="label_service">Service</string>
    <string name="label_expense_cost">Expense cost</string>
    <string name="label_expense_place">Expense place</string>
    <string name="label_confirmation">Confirmation</string>
    <string name="m_expense">M-Expense</string>
    <string name="label_setting">Setting</string>
    <string name="notification_backup_success">Backup successfully.</string>
    <string name="notification_backup_fail">Not backup successfully.</string>
    <string name="expense_management_system">Expense Management System</string>
    <string name="label_backup_firestore">Firestore Backup</string>
    <string name="error_empty_list">Empty list.</string>
    <string name="label_reset_database">Reset Database</string>
    <string name="label_backup">Backup</string>

    <string-array name="expense_type">
        <item>Food and drink</item>
        <item>Transport</item>
        <item>Accommodation</item>
        <item>Others</item>
    </string-array>
</resources>